test/functions/ferguson/generic-default-nil.good
generic-default-nil.chpl:7: error: unresolved call 'foo()'
generic-default-nil.chpl:3: note: this candidate did not match: foo(x: borrowed C(?) = nil)
generic-default-nil.chpl:3: note: because the generic formal 'x' of type 'borrowed C' cannot be instantiated with default value of type 'nil'
